<resources>
    <string name="app_name">Estate</string>
    <string name="about_us">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="sign_in">Sign In</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgotpassword"><u>Forgot Password?</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_collections">Colections</string>
    <string name="title_saved">Saved</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
