<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InitialPages.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgLogo"
        android:src="@drawable/splashlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        >
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:text="@string/about_us"
        android:lines="2"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtInfo"
        >
    </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edtUsername"
            android:hint="@string/username"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/txtInfo"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:paddingLeft="30dp"
            android:drawablePadding="15dp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/user_icon"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:background="@drawable/border_edittext"
        >
        </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edtPassword"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="30dp"
        android:hint="@string/password"
        android:layout_below="@+id/edtUsername"
        android:layout_centerHorizontal="true"
        android:drawablePadding="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/password_icon"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:background="@drawable/border_edittext"
        >
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_button"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:textStyle="normal"
        android:id="@+id/btnLogin"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/edtPassword">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/forgotpassword"
        android:layout_below="@+id/btnLogin"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAllCaps="false">
    </Button>

</RelativeLayout>